--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,9 @@ html{
     background-size: cover;
     font-family:'Lato', sans-serif;
     color:white;    
+    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Lato', sans-serif;
+    font-family: 'Mukta', sans-serif;
 }
 
 
@@ -102,16 +105,6 @@ h1 {
     border-radius:30px;
     color: white;
     transform: rotateY(180deg);
-}
-
-
-.textbox {
-    /* display:flex; */
-    background-color: white;
-    /* border-radius:50px; */
-    color: black;
-    justify-content: center;
-    /* align-items: center; */
 }
 
 
