--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-html{
+html,body{
     margin: 0;
     padding: 0;
     height: 100%;
@@ -25,23 +25,58 @@ html{
     font-family: 'Mukta', sans-serif;
 }
 
-
-
 h1 {
     display: flex;
-    justify-content:center;   
+    justify-content:center;  
+    font-size: 50px;
 }
 
+#pages{
+    display:inline;
+    text-align: right;
+}
+ul#pageList li:nth-child(4){
+    margin-right:50px;
+    
+}
 .otherPages{
     display:inline;
-    margin: 10px;
+    margin: 10px; 
 }
-
+#pageBackgrounds{
+    padding:0;
+    margin: 0;
+}
 .containers{
     display:flex;
     justify-content:space-around;
-
 }
+#aboutUs:hover{
+    background-color: white;
+    color: black;
+    border-radius: 6px; 
+    padding:5px
+}
+#help:hover{
+    background-color: white;
+    color: black;
+    border-radius: 6px; 
+    padding:5px
+}
+#privacy:hover{
+    background-color: white;
+    color: black;
+    border-radius: 6px; 
+    padding:5px
+}
+#legal:hover{
+    background-color: white;
+    color: black;
+    border-radius: 6px; 
+    padding:5px
+}
+
+
 
 #container1,#container2,#container3,#container4,#container5{
     display:flex;
@@ -106,11 +141,5 @@ h1 {
     color: white;
     transform: rotateY(180deg);
 }
-
-
-
-
-
-
 
 
