--- a/aboutUs.css
+++ b/aboutUs.css
@@ -12,13 +12,6 @@ html,body{
     font-family: 'Mukta', sans-serif;
 }
 
-h1 {
-    display: flex;
-    justify-content:center;  
-    font-size: 50px;
-}
-
-
 /* About Us, Help, Legal and Privacy Nav Bar */
 #pages{
     display:inline;
@@ -67,60 +60,42 @@ ul#pageList li:nth-child(4){
     padding:5px
 }
 
-/* card flip animations */
-#container1,#container2,#container3,#container4,#container5{
+h1{
+    font-size: 50px;
+}
+
+h1,p{
+    display: block;
+    text-align: center;
+}
+
+/* Makes whole container of team members in to flexbox */
+.teams{ 
     display:flex;
     justify-content: space-around;
-    width: 350px;
-    height: 300px;
-    border-radius:30px;
-    perspective:1000px;
 }
-.card{
-    position:relative;
-    display:flex;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    transition: transform 1s;
-    transform-style:preserve-3d;
-}
-#container1:hover .card {
-    transform: rotateY(180deg);
-}
-#container2:hover .card {
-    transform: rotateY(180deg);
-}
-#container3:hover .card {
-    transform: rotateY(180deg);
-}
-#container4:hover .card {
-    transform: rotateY(180deg);
-}
-#container5:hover .card {
-    transform: rotateY(180deg);
-}
-.front, .back{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-}
-.front {
-    display:flex;
+
+.teamMember{
     background-color: white;
-    border-radius:30px;
     color: black;
-    justify-content: center;
-    align-items: center;
-
-}
-.back {
-    background-color: dodgerblue;
-    border-radius:30px;
-    color: white;
-    transform: rotateY(180deg);
+    width:250px;
+    height:350px;
+    border-radius:50px;
+    transition:0.5s;
+    padding: 20px;
 }
 
+.teamMember > h2{
+    text-align: center;
+}
+
+.teamMember:hover{
+    width:300px;
+    height:400px;
+    padding: 20px;
+}
+
+.descrip{
+    text-align: left;
+}
 
