--- a/aboutUs.css
+++ b/aboutUs.css
@@ -12,6 +12,43 @@ html,body{
     font-family: 'Mukta', sans-serif;
 }
 
+.logo {
+    margin-left: 10px;
+} 
+
+.Technophobes{
+    color: white;
+    margin-top: 15px;
+    margin-bottom: 5px;
+    margin-left: 30px;
+    margin-right: 1300px;
+    border-radius: 20px;
+    padding: 2px 7px 2px 7px;
+    background-color: #0072c9;
+    opacity: 10;
+    text-align: center;
+    font-size: larger;
+}
+
+.header_flexbox {
+    display: flex;
+    justify-content: space-between;
+}
+
+ul#pageList li.otherPages {
+    display: inline;
+    margin: 10px;
+    background-color: rgba(255, 255, 255, 0.3); /* Add a background color with transparency */
+    border-radius: 6px;
+    padding: 5px;
+    cursor: pointer;
+
+    }
+
+    ul#pageList li.otherPages:hover {
+    background-color: white;
+    color: black;
+}
 /* About Us, Help, Legal and Privacy Nav Bar */
 #pages{
     display:inline;
@@ -62,6 +99,7 @@ ul#pageList li:nth-child(4){
 
 h1{
     font-size: 50px;
+
 }
 
 h1,p{
