--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ ul#pageList li:nth-child(4){
     display:flex;
     justify-content:space-around;
 }
-#aboutUs,#help,#privacy,#legal{
+#aboutUs,#resources,#privacy,#legal{
     transition:0.5s;
 }
 #aboutUs:hover{
@@ -48,7 +48,7 @@ ul#pageList li:nth-child(4){
     border-radius: 6px; 
     padding:5px
 }
-#help:hover{
+#resources:hover{
     background-color: white;
     color: black;
     border-radius: 6px; 
