--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,24 @@ html,body{
     font-family: 'Mukta', sans-serif;
 }
 
+.Technophobes{
+    color: white;
+    margin-top: 15px;
+    margin-bottom: 5px;
+    margin-left: 30px;
+    margin-right: 1300px;
+    border-radius: 20px;
+    padding: 2px 7px 2px 7px;
+    background-color: #0072c9;
+    opacity: 10;
+    text-align: center;
+    font-size: larger;
+}
+
+.header_flexbox {
+    display: flex;
+}
+
 h1 {
     display: flex;
     justify-content:center;  
@@ -19,13 +37,11 @@ h1 {
 }
 
 
-/* About Us, Help, Legal and Privacy Nav Bar */
+/* About Us, Resources, Legal and Privacy Nav Bar */
 #pages{
-    display:inline;
-    text-align: right;
-}
-ul#pageList li:nth-child(4){
-    margin-right:50px;
+    position: absolute;
+    top: 10px; 
+    right: 10px; 
 }
 .otherPages{
     display:inline;
@@ -39,7 +55,7 @@ ul#pageList li:nth-child(4){
     display:flex;
     justify-content:space-around;
 }
-#aboutUs,#help,#privacy,#legal{
+#aboutUs,#resources,#privacy,#legal{
     transition:0.5s;
 }
 #aboutUs:hover{
@@ -48,7 +64,7 @@ ul#pageList li:nth-child(4){
     border-radius: 6px; 
     padding:5px
 }
-#help:hover{
+#resources:hover{
     background-color: white;
     color: black;
     border-radius: 6px; 
@@ -65,6 +81,25 @@ ul#pageList li:nth-child(4){
     color: black;
     border-radius: 6px; 
     padding:5px
+}
+
+#intro{
+    font-size: 30px;
+}
+
+#teamNames{
+    font-size: 20px;
+}
+
+#teamNames,#intro{
+    display: flex;
+    justify-content: center;
+}
+
+#introP{
+    font-size: 25px; 
+    display: flex;
+    justify-content: center;
 }
 
 /* card flip animations */
@@ -123,4 +158,7 @@ ul#pageList li:nth-child(4){
     transform: rotateY(180deg);
 }
 
+ul{
+    list-style-type: none;
+}
 
