--- a/aboutUs.css
+++ b/aboutUs.css
@@ -65,7 +65,7 @@ ul#pageList li:nth-child(4){
     display:flex;
     justify-content:space-around;
 }
-#aboutUs,#help,#privacy,#legal{
+#aboutUs,#resources,#privacy,#legal{
     transition:0.5s;
 }
 #aboutUs:hover{
@@ -74,7 +74,7 @@ ul#pageList li:nth-child(4){
     border-radius: 6px; 
     padding:5px
 }
-#help:hover{
+#resources:hover{
     background-color: white;
     color: black;
     border-radius: 6px; 
