--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,14 @@ h1 {
     display:inline;
     margin: 10px; 
 }
+.otherpages:link{
+    color:white;
+    text-decoration:none;
+}
+.otherPages:visited{
+    color: white;
+    text-decoration: none;
+}
 #pageBackgrounds{
     padding:0;
     margin: 0;
@@ -55,7 +63,7 @@ h1 {
     display:flex;
     justify-content:space-around;
 }
-#aboutUs,#resources,#privacy,#legal{
+#aboutUs,#resources,#legalPrivacy{
     transition:0.5s;
 }
 #aboutUs:hover{
@@ -70,13 +78,7 @@ h1 {
     border-radius: 6px; 
     padding:5px
 }
-#privacy:hover{
-    background-color: white;
-    color: black;
-    border-radius: 6px; 
-    padding:5px
-}
-#legal:hover{
+#legalPrivacy:hover{
     background-color: white;
     color: black;
     border-radius: 6px; 
