--- a/businessAnalysis.css
+++ b/businessAnalysis.css
@@ -103,16 +103,18 @@ h1,p{
     justify-content: center;
     border-radius: 50px;
     margin: 20px 40px 10px 40px;
-    width: 695px;
-    padding-top: -100px; 
+    /* width: 695px; */
+    /* padding-top: -100px;  */
     border: #0072c9;
     border-style: solid;
     border-width: 10px;
+    /* width: 50vw; */
 }
 
 .images{
     display: flex;
     flex-direction: column;
+    /* margin-left: 10vw; */
 }
 
 .img{
