--- a/aboutUs.css
+++ b/aboutUs.css
@@ -65,7 +65,7 @@ ul#pageList li:nth-child(4){
     display:flex;
     justify-content:space-around;
 }
-#aboutUs,#resources,#privacy,#legal{
+#aboutUs,#resources,#legalPrivacy{
     transition:0.5s;
 }
 #aboutUs:hover{
@@ -80,13 +80,7 @@ ul#pageList li:nth-child(4){
     border-radius: 6px; 
     padding:5px
 }
-#privacy:hover{
-    background-color: white;
-    color: black;
-    border-radius: 6px; 
-    padding:5px
-}
-#legal:hover{
+#legalPrivacy:hover{
     background-color: white;
     color: black;
     border-radius: 6px; 
