--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ html,body{
     margin: 0;
     padding: 0;
     height: 100%;
-    background-image: url("sky_background2.jpeg");
+    background-image: url("/images/sky_background2.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     font-family:'Lato', sans-serif;
@@ -199,7 +199,7 @@ ul{
 }
 
 .Page_Footer {
-    background-image: url("sky_background2.jpeg");
+    background-color:#071b42;
     color: white;
     text-align: center;
     padding: 5px;
