--- a/V2_Agile_Design_Style.css
+++ b/V2_Agile_Design_Style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("sky_background2.jpeg");
+    background-image: url("/images/sky_background2.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -12,7 +12,7 @@ body{
 
 .header {
     display:inline-block;
-    background-image: url("sky_background2.jpeg");
+    background-image: url("/images/sky_background2.jpeg");
     padding: 0px;
     position:fixed;
     top: 0;
