--- a/agile_design.css
+++ b/agile_design.css
@@ -1,6 +1,6 @@
 /*agile_design.css*/
 body{
-    background-image: url("sky_background2.jpeg");
+    background-image: url("/images/sky_background2.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -12,7 +12,7 @@ body{
 }
 header {
     display:inline-block;
-    background-image: url("sky_background2.jpeg");
+    background-image: url("/images/sky_background2.jpeg");
     padding: 0px;
     position:fixed;
     top: 0;
@@ -163,7 +163,7 @@ ul#pageList li.otherPages:hover {
     text-align: left;
 }
 .Page_Footer {
-    background-image: url("sky_background2.jpeg");
+    background-image: url("/images/sky_background2.jpeg");
     color: white;
     text-align: center;
     padding: 10px;
