--- a/businessAnalysis.css
+++ b/businessAnalysis.css
@@ -34,9 +34,34 @@ html,body{
 /* About Us, Help, Legal and Privacy Nav Bar */
 #pages{
     position: absolute;
-    top: 10px; 
-    right: 10px; 
+    top: 10px; /* Adjust the top spacing as needed */
+    right: 10px; /* Adjust the right spacing as needed */
 }
+
+ul#pageList {
+list-style: none; /* Remove default list styles */
+padding: 0;
+margin: 0;
+}
+
+ul#pageList li:nth-child(4){
+    margin-right:50px;
+    margin-bottom: -700px;
+}
+
+ul#pageList li.otherPages {
+display: inline;
+margin: 10px;
+cursor: pointer;
+
+}
+
+ul#pageList li.otherPages:hover {
+background-color: white;
+color: black;
+}
+
+
 .otherPages{
     display:inline;
     margin: 10px; 
@@ -44,12 +69,13 @@ html,body{
 #pageBackgrounds{
     padding:0;
     margin: 0;
-}
+} */
+
 .containers{
     display:flex;
     justify-content:space-around;
 }
-#aboutUs,#help,#privacy,#legal{
+#aboutUs,#resources, #legalPrivacy{
     transition:0.5s;
 }
 #aboutUs:hover{
@@ -58,23 +84,31 @@ html,body{
     border-radius: 6px; 
     padding:5px
 }
-#help:hover{
+#resources:hover{
     background-color: white;
     color: black;
     border-radius: 6px; 
     padding:5px
 }
-#privacy:hover{
+#legalPrivacy:hover{
     background-color: white;
     color: black;
     border-radius: 6px; 
     padding:5px
 }
-#legal:hover{
-    background-color: white;
-    color: black;
-    border-radius: 6px; 
-    padding:5px
+
+a:link{
+    color: white;
+    text-decoration: none;
+}
+
+a:visited{
+    color: white;
+    text-decoration: none;
+}
+
+.nav:hover{
+color:black;
 }
 
 h1{
@@ -88,7 +122,7 @@ h1,p{
 
 
 .Page_Footer {
-    background-image: url("/images/sky_background2.jpeg");
+    background-color: #071b42;
     color: white;
     text-align: center;
     padding: 5px;
