--- a/webDev.css
+++ b/webDev.css
@@ -34,9 +34,34 @@ html,body{
 /* About Us, Help, Legal and Privacy Nav Bar */
 #pages{
     position: absolute;
-    top: 10px; 
-    right: 10px; 
+    top: 10px; /* Adjust the top spacing as needed */
+    right: 10px; /* Adjust the right spacing as needed */
 }
+
+ul#pageList {
+list-style: none; /* Remove default list styles */
+padding: 0;
+margin: 0;
+}
+
+ul#pageList li:nth-child(4){
+    margin-right:50px;
+    margin-bottom: -700px;
+}
+
+ul#pageList li.otherPages {
+display: inline;
+margin: 10px;
+cursor: pointer;
+
+}
+
+ul#pageList li.otherPages:hover {
+background-color: white;
+color: black;
+}
+
+
 .otherPages{
     display:inline;
     margin: 10px; 
@@ -44,12 +69,13 @@ html,body{
 #pageBackgrounds{
     padding:0;
     margin: 0;
-}
+} */
+
 .containers{
     display:flex;
     justify-content:space-around;
 }
-#aboutUs,#help,#privacy,#legal{
+#aboutUs,#resources, #legalPrivacy{
     transition:0.5s;
 }
 #aboutUs:hover{
@@ -58,7 +84,7 @@ html,body{
     border-radius: 6px; 
     padding:5px
 }
-#help:hover{
+#resources:hover{
     background-color: white;
     color: black;
     border-radius: 6px; 
@@ -71,6 +97,20 @@ html,body{
     padding:5px
 }
 
+a:link{
+    color: white;
+    text-decoration: none;
+}
+
+a:visited{
+    color: white;
+    text-decoration: none;
+}
+
+.nav:hover{
+color:black;
+}
+
 h1{
     font-size: 50px;
 }
@@ -80,9 +120,12 @@ h1,p{
     text-align: center;
 }
 
+p{
+    font-size: 20px;
+}
 
 .Page_Footer {
-    background-image: url("/images/sky_background2.jpeg");
+    background-color: #071b42;
     color: white;
     text-align: center;
     padding: 5px;
@@ -96,26 +139,39 @@ h1,p{
     color: black;
     justify-content: center;
     border-radius: 50px;
-    margin: 20px 40px 10px 40px;
-    width: 695px;
+    margin: 20px 150px 10px 40px;
+    width: 800px;
+    height:auto;
     padding-top: -100px; 
     border: #0072c9;
     border-style: solid;
     border-width: 10px;
+    font-size: 20px;
 }
 
 .images{
     display: flex;
     flex-direction: column;
-    margin-right: -50px;
-    
+    margin-left: 0;
+    width:800px;
+    text-align: center;
 }
 
 .img{
-    margin: 30px;
+    margin: 10px;
     border-radius: 30px;
     padding: 20px;
     background-color: white;
+    align-items: center;
+}
+
+.imgText{
+    color: black;
+    background-color: white;
+    border: #0072c9;
+    border-style: solid;
+    border-width: 10px;
+    border-radius: 50px;
 }
 
 #topHalf{
@@ -129,3 +185,4 @@ h1,p{
 .infoHeadings{
     text-align: center;
 }
+
