changes to page

--- a/V2_Agile_Design_Style.css
+++ b/V2_Agile_Design_Style.css
@@ -163,7 +163,7 @@ color: black;
     border-radius: 50px;
     margin: -30px 40px 10px 40px;
     padding-top: -100px; 
-    
+    font-size:15pt;
     border: #0072c9;
     border-style: solid;
     border-width: 10px;
